k8s/applications/tools/it-tools/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - name: http
      port: 80
      targetPort: http
