k8s/applications/tools/it-tools/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - tools.eudald.gr
  rules:
  - backendRefs:
    - name: it-tools
      port: 80
